--- a/slides/index.html
+++ b/slides/index.html
@@ -99,9 +99,12 @@ vapor run serve
 		</code></pre>
 	</section>
 	<section class="slide">
+		<style>a.shout { background: none; }</style>
+		<a class="shout" href="https://github.com/sameoldmadness/swift-web-talk/blob/master/examples/ProjectStub/App/main.swift">Demo</a>
+	</section>
+	<section class="slide">
 		<h2>Swift in the Web</h2>
-		<p>Roman Paradeev</p>
-		<p>@sameoldmadness</p>
+		<p>Roman Paradeev @sameoldmadness</p>
 		<p></p>
 	</section>
 	<div class="progress"></div>
