remove image shout

--- a/slides/index.html
+++ b/slides/index.html
@@ -56,7 +56,7 @@
 		<p class="shout">Universal<br>Swift</p>
 	</section>
 	<section class="slide">
-		<img class="shout" src="pictures/frameworks.png">
+		<img src="pictures/frameworks.png">
 	</section>
 	<section class="slide">
 		<h2>Vapor</h2>
