--- a/slides/index.html
+++ b/slides/index.html
@@ -50,7 +50,7 @@
 		<h2>Swift is fast</h2>
 		<p>Compilation, and Automatic Reference Counting</p>
 		<h2>Swift is expressive</h2>
-		<p>Extensions and Protocols, and Optional chaining</p>
+		<p>Extensions, Protocols, and Optional chaining</p>
 	</section>
 	<section class="slide">
 		<p class="shout">Universal<br>Swift</p>
